<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:minWidth="280dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_leave_confirmation_message"
        android:layout_margin="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?android:textColorSecondary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|end"
        android:padding="8dp">

        <Button
            android:id="@+id/leave_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_leave_button_label" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_save_button_label" />

    </LinearLayout>

</LinearLayout>