<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.InsertManuallyActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/status_bar_placeholder_height"
        android:background="@drawable/status_bar_gradient" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/insert_manually_layout_side_margin"
        android:paddingRight="@dimen/insert_manually_layout_side_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="@dimen/layout_outer_margin"
        android:layout_marginRight="@dimen/layout_outer_margin"
        android:layout_marginTop="@dimen/layout_outer_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/insert_manually_back_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_action_back"
                android:tint="?android:textColorSecondary" />

            <EditText
                android:id="@+id/ean_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/manually_insert_input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_max_length"
                android:maxLines="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:saveEnabled="true" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/insert_manually_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/insert_manually_book_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/insert_book_not_found_in_api"
        android:textColor="?android:textColorSecondary"
        android:visibility="gone"
        tools:visibility="visible" />

    <android.support.v7.widget.CardView
        android:id="@+id/matching_book_data_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_outer_margin"
        android:layout_marginRight="@dimen/layout_outer_margin"
        android:layout_marginTop="@dimen/layout_outer_margin"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:theme="@style/DetailsTheme">


            <it.jaschke.alexandria.widgets.BookInfoView
                android:id="@+id/matching_book_info_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:visibility="gone"
                tools:visibility="visible">

                <include
                    android:id="@+id/matching_book_optional_color_layout"
                    layout="@layout/colors_grid_layout" />

            </FrameLayout>

            <View style="@style/AppTheme.Separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp">

                <ImageView
                    android:id="@+id/matching_book_pick_color_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_action_color_pick" />

                <Button
                    android:id="@+id/matching_book_save_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/manually_insert_confirm_button" />

            </RelativeLayout>

            <include
                android:id="@+id/matching_book_already_added"
                layout="@layout/book_already_in_catalog_layout" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
